--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-1-light-1 u-radius-30 u-repeater-item u-shape-round u-list-item-4" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
                 <div class="u-container-layout u-similar-container u-container-layout-5"><span class="u-custom-item u-file-icon u-icon u-icon-circle u-white u-icon-4" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750"><img src="images/3dprint1.png" alt=""></span>
                   <h4 class="u-text u-text-8" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-4" href="../04/index.html">WEEK 4</a>
+                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-4" href="./04/index.html">WEEK 4</a>
                   </h4>
                   <p class="u-text u-text-9" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">3D Design and Printing</p>
                 </div>
@@ -120,7 +120,7 @@
               <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-1-light-1 u-radius-30 u-repeater-item u-shape-round u-list-item-5" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
                 <div class="u-container-layout u-similar-container u-container-layout-6"><span class="u-custom-item u-file-icon u-icon u-icon-circle u-white u-icon-5" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750"><img src="images/arduino2.png" alt=""></span>
                   <h4 class="u-text u-text-10" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-5" href="../05/index.html">WEEK 5</a>
+                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-5" href="./05/index.html">WEEK 5</a>
                   </h4>
                   <p class="u-text u-text-11" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">Microcontroller programming</p>
                 </div>
@@ -128,7 +128,7 @@
               <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-1-light-2 u-radius-30 u-repeater-item u-shape-round u-list-item-6" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
                 <div class="u-container-layout u-similar-container u-container-layout-7"><span class="u-custom-item u-file-icon u-icon u-icon-circle u-white u-icon-6" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750"><img src="images/sensor.png" alt=""></span>
                   <h4 class="u-text u-text-12" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-6" href="../06/index.html">WEEK 6</a>
+                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-6" href="./06/index.html">WEEK 6</a>
                   </h4>
                   <p class="u-text u-text-13" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">Electronic Input Devices</p>
                 </div>
@@ -136,7 +136,7 @@
               <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-1-light-1 u-radius-30 u-repeater-item u-shape-round u-list-item-7" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
                 <div class="u-container-layout u-similar-container u-container-layout-8"><span class="u-custom-item u-file-icon u-icon u-icon-circle u-white u-icon-7" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750"><img src="images/pump.png" alt=""></span>
                   <h4 class="u-text u-text-14" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-7" href="../07/index.html">WEEK 7</a>
+                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-7" href="./07/index.html">WEEK 7</a>
                   </h4>
                   <p class="u-text u-text-15" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">Electronic Output Devices</p>
                 </div>
@@ -144,7 +144,7 @@
               <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-1-light-2 u-radius-30 u-repeater-item u-shape-round u-list-item-8" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
                 <div class="u-container-layout u-similar-container u-container-layout-9"><span class="u-custom-item u-file-icon u-icon u-icon-circle u-white u-icon-8" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750"><img src="images/milling.png" alt=""></span>
                   <h4 class="u-text u-text-16" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-8" href="../08/index.html">WEEK 8</a>
+                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-8" href="./08/index.html">WEEK 8</a>
                   </h4>
                   <p class="u-text u-text-17" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">CNC Milling, Molding and Casting</p>
                 </div>
@@ -156,7 +156,7 @@
               <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-1-light-2 u-radius-30 u-repeater-item u-shape-round u-list-item-9" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
                 <div class="u-container-layout u-similar-container u-container-layout-10"><span class="u-custom-item u-file-icon u-icon u-icon-circle u-white u-icon-9" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750"><img src="images/wifi1.png" alt=""></span>
                   <h4 class="u-text u-text-18" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-9" href="../09/index.html">WEEK 9</a>
+                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-9" href="./09/index.html">WEEK 9</a>
                   </h4>
                   <p class="u-text u-text-19" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">Radio, Wifi, Bluetooth</p>
                 </div>
@@ -164,7 +164,7 @@
               <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-1-light-1 u-radius-30 u-repeater-item u-shape-round u-list-item-10" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
                 <div class="u-container-layout u-similar-container u-container-layout-11"><span class="u-custom-item u-file-icon u-icon u-icon-circle u-white u-icon-10" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750"><img src="images/stepper2.png" alt=""></span>
                   <h4 class="u-text u-text-20" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-10" href="../10/index.html">Week 10</a>
+                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-10" href="./10/index.html">Week 10</a>
                   </h4>
                   <p class="u-text u-text-21" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">Machine Building and End effectors</p>
                 </div>
@@ -172,7 +172,7 @@
               <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-1-dark-1 u-radius-30 u-repeater-item u-shape-round u-list-item-11" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-direction="" data-animation-delay="500">
                 <div class="u-container-layout u-similar-container u-container-layout-12"><span class="u-custom-item u-file-icon u-icon u-icon-circle u-white u-icon-11" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750"><img src="images/filter1.png" alt=""></span>
                   <h4 class="u-text u-text-22" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-light-2 u-none u-text-black u-text-hover-white u-btn-11" href="../12/index.html">FINAL PROJECT&nbsp;</a>
+                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-light-2 u-none u-text-black u-text-hover-white u-btn-11" href="./12/index.html">FINAL PROJECT&nbsp;</a>
                   </h4>
                   <p class="u-text u-text-23" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">Planning and Progress</p>
                 </div>
@@ -180,7 +180,7 @@
               <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-1-dark-2 u-radius-30 u-repeater-item u-shape-round u-list-item-12" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
                 <div class="u-container-layout u-similar-container u-container-layout-13"><span class="u-custom-item u-file-icon u-icon u-icon-circle u-white u-icon-12" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750"><img src="images/system.png" alt=""></span>
                   <h4 class="u-text u-text-24" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-light-2 u-none u-text-black u-text-hover-white u-btn-12" href="../01_intro/FinalProject.html">FINAL PROJECT</a>
+                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-light-2 u-none u-text-black u-text-hover-white u-btn-12" href="./01_intro/FinalProject.html">FINAL PROJECT</a>
                   </h4>
                   <p class="u-text u-text-25" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">Demo and Final Results</p>
                 </div>
