--- a/03/index.html
+++ b/03/index.html
@@ -13,10 +13,29 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="image.css">
 
+<!-- Include Bootstrap CSS -->
+    <link rel="stylesheet"
+          href=
+"https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+ 
+    <style>
+        /* Modify the background color */
+         
+        .navbar-custom {
+            background-color: rgb(212, 234, 246);
+        }
+
+        </style>
+
+<style>
+.body {background-color: rgb(249, 248, 255); font-family: Roboto Slab; font-weight: 300px; align:justify;}
+h1 {font-family:Roboto Condensed; font weight:1000px; color:rgb(212, 234, 246);}
+.h2 {font-family:Roboto Condensed; font weight:800px; color:rgb(0, 0, 0);}
+</style>
 
 <!--/*Source: Navbar Bootstrsap -->
 <nav class="navbar navbar-expand-md navbar-light bg-light">
-  <span class="navbar-brand mb-0 h1"> PS 70: Intro to Digital Fabrication</span>
+  <span class="navbar-brand mb-0 h2"> PS 70: Intro to Digital Fabrication</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="collapse" >
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -45,22 +64,14 @@
         <a class="dropdown-item" href="../10/index.html">Week 10</a>
         <a class="dropdown-item" href="../11/index.html">Week 11</a>
         <a class="dropdown-item" href="../12/index.html">Week 12</a>
-        <a class="dropdown-item" href="../13/index.html">Week 13</a>
-        <a class="dropdown-item" href="../14/index.html">Week 14</a>
         <a class="dropdown-item" href="../FinalProject/index.html">Final Project</a>
       </div>
     </ul>
   </div>
 </nav>
+</head>
 
-<style>
-body {background-color: rgb(249, 248, 255);}
-</style>
-<style>
-  h1 {font-family:Roboto Condensed; font weight:1000px; font color:color:rgb(212, 234, 246);}
-</style>
 
-<body font-family = "Roboto Slab" font-weight=300px align="justify">
 <h1>WEEK 3: HAND TOOLS AND FABRICATION </h1>
 
 <xmp style="display:none;">
