--- a/04/index.html
+++ b/04/index.html
@@ -3,6 +3,9 @@
 
 <title>PS70: Intro to Digital Fabrication </title>
 <head>
+  <link href='https://fonts.googleapis.com/css?family=Roboto Slab' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Roboto Condensed' rel='stylesheet'>
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
@@ -11,10 +14,30 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="image.css">
 
+<!-- Include Bootstrap CSS -->
+    <link rel="stylesheet"
+          href=
+"https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+ 
+    <style>
+        /* Modify the background color */
+         
+        .navbar-custom {
+            background-color: rgb(212, 234, 246);
+        }
+
+        </style>
+
+<style>
+.body {background-color: rgb(249, 248, 255); font-family: Roboto Slab; font-weight: 300px; align:justify;}
+h1 {font-family:Roboto Condensed; font weight:1000px; color:rgb(212, 234, 246);}
+.h2 {font-family:Roboto Condensed; font weight:800px; color:rgb(0, 0, 0);}
+</style>
+
 
 <!--/*Source: Navbar Bootstrsap -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <span class="navbar-brand mb-0 h1"> PS 70: Intro to Digital Fabrication</span>
+  <span class="navbar-brand mb-0 h2"> PS 70: Intro to Digital Fabrication</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="collapse" >
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -51,14 +74,8 @@
   </div>
 </nav>
 
-<style>
-body {background-color: rgb(249, 248, 255);}
-</style>
-<style>
-  h1 {font-family:Roboto Condensed; font weight:1000px; font color:color:rgb(212, 234, 246);}
-</style>
+</head>
 
-<body class="Avantgarde" font-weight=300px align="justify">
 <h1>WEED 4: 3D PRINTING </h1>
 
 <xmp style="display:none;">
