--- a/10/index.html
+++ b/10/index.html
@@ -18,10 +18,30 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="image.css">
 
+<!-- Include Bootstrap CSS -->
+    <link rel="stylesheet"
+          href=
+"https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+ 
+    <style>
+        /* Modify the background color */
+         
+        .navbar-custom {
+            background-color: rgb(212, 234, 246);
+        }
+
+        </style>
+
+<style>
+.body {background-color: rgb(249, 248, 255); font-family: Roboto Slab; font-weight: 300px; align:justify;}
+h1 {font-family:Roboto Condensed; font weight:1000px; color:rgb(212, 234, 246);}
+.h2 {font-family:Roboto Condensed; font weight:800px; color:rgb(0, 0, 0);}
+</style>
+
 
 <!--/*Source: Navbar Bootstrsap -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <span class="navbar-brand mb-0 h1"> PS 70: Intro to Digital Fabrication</span>
+  <span class="navbar-brand mb-0 h2"> PS 70: Intro to Digital Fabrication</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="collapse" >
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -57,19 +77,9 @@
     </ul>
   </div>
 </nav>
-
+</head>
 
 <body>
-
-
-<style>
-body {background-color: rgb(249, 248, 255);}
-</style>
-<style>
-  h1 {font-family:Roboto Condensed; font weight:1000px; font color:color:rgb(212, 234, 246);}
-</style>
-
-<body font-family = "Roboto Slab" font-weight=300px align="justify">
 
 <h1>WEEK 10: MACHINE BUILDING AND END EFFECTORS</h1>
 
