--- a/04/index.html
+++ b/04/index.html
@@ -76,7 +76,7 @@ h1 {font-family:Roboto Condensed; font weight:1000px; color:rgb(212, 234, 246);}
 
 </head>
 
-<h1>WEED 4: 3D PRINTING </h1>
+<h1>WEEK 4: 3D PRINTING </h1>
 
 <xmp style="display:none;">
 <br> 
