--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-1-dark-2 u-radius-30 u-repeater-item u-shape-round u-list-item-12" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
                 <div class="u-container-layout u-similar-container u-container-layout-13"><span class="u-custom-item u-file-icon u-icon u-icon-circle u-white u-icon-12" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750"><img src="images/system.png" alt=""></span>
                   <h4 class="u-text u-text-24" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-light-2 u-none u-text-black u-text-hover-white u-btn-12" href="./01_intro/FinalProject.html">FINAL PROJECT</a>
+                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-light-2 u-none u-text-black u-text-hover-white u-btn-12" href="./FinalProject/index.html">FINAL PROJECT</a>
                   </h4>
                   <p class="u-text u-text-25" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">Demo and Final Results</p>
                 </div>
