--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -67,14 +67,11 @@ h1 {font-family:Roboto Condensed; font weight:1000px; color:rgb(212, 234, 246);}
     </ul>
   </div>
 </nav>
+</head>
 
+<body>
 
-<style>
-body {background-color: rgb(232, 245, 233);}
-</style>
-
-<body class="Avantgarde" font-weight=300px align="justify">
-<h1 font weight=700px>Final Project: Planning and Ideation </h1>
+<h1 > FINAL PROJECT: PLANNING AND IDEATION </h1>
 
 <xmp style="display:none;">
 <br> 
@@ -169,7 +166,7 @@ System together (labelled)
 
 <b>Video</b>
 
-<video width ="600" height="1000" >
+<video width ="600" height="1000" controls >
   <source src="../FinalProject/final_project.mp4" type="video/mp4" style="float:center"/>
 </video>
 
