--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -135,10 +135,7 @@ o Fine sand, charcoal, pebbles, activated carbon
 - Sealant
 - [Source](https://www.instructables.com/How-to-Make-Water-Turbidity-Sensor/)
 - Design will be modified but principal mechanism will remain the same
-Other materials:
-- DC motor
-- Wires
-- Arduino 
+
 
 <b> Project Plan </b>
 
@@ -150,10 +147,7 @@ I am planning to 3D print a functional pump. I have not yet decided what type of
 
 I have not been able to come up with a more sophisticated design for a filter besides one such as the one in the image below (i.e a bio or sand filter). I would like to replicate a professional filter using membranes but I am unclear on how these are produced exactly and if this would be feasibly reproduced. 
 
-<div class = "center">
-  <img src="../FinalProject/filter.jpg" 
-     width ="300" height="300"/>
-</div>
+<img src="filter.jpg" alt="Filter" style="width:40%"  class="center">
 
 
 [This](https://iwaponline.com/ws/article/19/4/1036/63760/Fiber-filter-built-with-polypropylene-fibers)paper suggests making fibers out of polypropylene. I am struggling to find a clear outline how to recreate this however, and it seems that it is not widely used at the moment. 
@@ -183,13 +177,13 @@ To create a household (i.e. small scale) , cost-effective water system with an e
 <u>Overall view of designs</u>
 
 
-<img src="individual_labelled.jpeg" alt="labelled system" class="center">
+<img src="individual_labelled.jpg" alt="labelled system" class="center">
 
 Individual components labelled
 
 System together 
 
-<img src="system_labelled.jpeg" alt="labelled system" class="center">
+<img src="system_labelled.jpg" alt="labelled system" class="center">
 
 
 <b>Video</b>
@@ -210,14 +204,14 @@ The “Jinhe motor submersible Bilge pump” used for fish-tanks was used in pla
 
 The filter is modelled of this 5-stage filter, with the main difference being removable compartments. Components were extracted from the purchased filter and mesh was purchased separately. The mesh was secured to the compartments of the filter using a press-fit, additional 3d printed ring. PETG filament was used given its water-safe and waterproof qualities, however additional silicone coating was required to further seal the print.
 
-<img src="filter.jpeg" alt="filter" style="width:100%"  class="center">
+<img src="filter.jpeg" alt="filter" style="width:60%"  class="center">
 
 <u>Water Sensor</u>
 
 The Gilkfun capacitive soil moisture was used in place of capacitive sensors due to less variability and therefore more reliability in water level readings. Additionally the pre-purchased sensor is corrosion resistant allowing for more sustainability. This sensor is also highly cost effective at under 10 dollars.
 
 
-<img src="sensor.jpeg" alt="Sensor" style="width:100%"  class="center">
+<img src="sensor.jpeg" alt="Sensor" style="width:40%"  class="center">
 
 <u> Bluetooth App</u>
 
@@ -226,7 +220,7 @@ The Bluetooth app was modeled using MIT App inventor which follows block-based c
 2)  Medium level
 3)  High level
 
-<img src="bluetooth.jpeg" alt="Bluetooth" style="width:100%"  class="center">
+<img src="bluetooth.jpeg" alt="Bluetooth" style="width:60%"  class="center">
 
 <u> Fittings / stand / electrical components </u>
 
